// Copyright (c) 2016-present, Facebook, Inc.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree. An additional grant
// of patent rights can be found in the PATENTS file in the same directory.

syntax = "proto3";

package magma.orc8r;
option go_package = "magma/orc8r/lib/go/protos";

message Identity {
    message Wildcard {
        enum Type {
            Gateway = 0;
            Operator = 1;
            Network = 2;
        }
        Type type = 1;
    }

    message Gateway {
        string hardware_id = 1; // unique hardware ID of a gateway encoded in CN of GW certificate
        string network_id = 2;
        string logical_id = 3;
    }
    // NOTE: Every Value type below should have corresponding entry in
    // identityTypeNameTable in magma/protos/identity_helper.go
    oneof Value {
        Gateway gateway = 1;
        string  operator = 2; // unique operator ID (user name), encoded in CN of operator certificate
        string  network = 3; // unique network ID, used by REST access control
        Wildcard wildcard = 11;
    }

    // Identities list wrapper
    message List {
        repeated Identity list = 1;
    }
}


// --------------------------------------------------------------------------
// AccessGatewayID uniquely identifies an access gateway across the system
// Based on the usage context it could represent either hardware or logical
// AG ID.
// --------------------------------------------------------------------------
message AccessGatewayID {
    string id = 1;
}
